Fixing hero link color contrast per WCAG 2.1 AA

--- a/assets/sass/content.sass
+++ b/assets/sass/content.sass
@@ -19,6 +19,10 @@ $content-table-head-cell-color: $text-strong !default
 $content-table-foot-cell-border-width: 2px 0 0 !default
 $content-table-foot-cell-color: $text-strong !default
 
+.hero.is-primary a
+  color: #173d4f
+  &:hover
+    color: #000
 .content
   @extend %block
   // Inline
